[project]
name = "snowfinder_common"
version = "0.1.0"
description = "Shared utilities for snowfinder Python services"
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary]>=3.2",
    "psycopg_pool>=3.2",
    "python-dotenv>=1.0",
    "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "T20", "RUF", "S", "PERF"]
ignore = ["E501", "S101"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG"]

[tool.mypy]
python_version = "3.14"
warn_return_any = true
disallow_untyped_defs = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "requests>=2.33.1",
]
